fix styling issue on smaller screens

--- a/src/app/dashboards/projects/shared/widgets/workItemStateTypeMap/workItemStateType.css
+++ b/src/app/dashboards/projects/shared/widgets/workItemStateTypeMap/workItemStateType.css
@@ -1,5 +1,7 @@
 .stateTypeWrapper {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .controlsWrapper {
@@ -33,6 +35,8 @@
 }
 
 .chartWrapper {
+  width: 100%;
+  height: 100%;
 }
 
 .noWorkItemResources {
